tests/baselines/reference/parser521128.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser521128.ts(1,1): error TS2304: Cannot find name 'module'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser521128.ts(1,15): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser521128.ts (2 errors) ====
    module.module { }
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                  ~
!!! error TS1005: ';' expected.